# ProgLab_IpSort

./: CMakeLists.txt  ip_filter.cpp  ip_filter.h  main.cpp  tests.cpp
.github/workflows/: cmake-multi-platform.yml
